@@ -50,6 +50,7 @@ def init_patch(qapp, fake_save_manager, monkeypatch, config_tmpdir,
 def args(fake_args):
     """Arguments needed for the config to init."""
     fake_args.temp_settings = []
+    fake_args.config_py = None
     return fake_args
 
 
@@ -216,6 +217,16 @@ class TestEarlyInit:
         assert len(configinit._init_errors.errors) == 1
         error = configinit._init_errors.errors[0]
         assert str(error).startswith("autoconfig loading not specified")
+
+    def test_autoconfig_warning_custom(self, init_patch, args, tmp_path, monkeypatch):
+        """Make sure there is no autoconfig warning with --config-py."""
+        config_py_path = tmp_path / 'config.py'
+        config_py_path.touch()
+
+        args.config_py = str(config_py_path)
+        monkeypatch.setattr(configinit.standarddir, 'config_py', lambda: str(config_py_path))
+
+        configinit.early_init(args)
 
     @pytest.mark.parametrize('byte', [
         b'\x00',  # configparser.Error
